Bug 878183 - Exit ReentrantMonitor when calling OnDecodeThreadFinish(). r=cpearce, a=leo+